--- a/templates/html/.partials/type.html
+++ b/templates/html/.partials/type.html
@@ -1,11 +1,11 @@
 {% macro type(prop) %}
-{{prop.type}}
-{%- if prop.items -%}
+{{prop.json('type')}}
+{%- if prop.items() -%}
   &lt;
-  {%- if prop.items.type -%}
-    {{- prop.items.type -}}
-  {% elif prop.items | isArray -%}
-    {%- for p in prop.items -%}
+  {%- if prop.items().json('type') -%}
+    {{- prop.items().json('type') -}}
+  {% elif prop.items() | isArray -%}
+    {%- for p in prop.items() -%}
       {{- type(p) -}}{% if not loop.last %}, {% endif %}
     {%- endfor -%}
   {%- else -%}
