--- a/templates/html/.partials/operations.html
+++ b/templates/html/.partials/operations.html
@@ -6,10 +6,10 @@
 {% for channelName, channel in asyncapi.channels %}
   <div class="responsive-container">
     {% if channel.publish %}
-      {{ operation(channel.publish, 'publish', channelName) }}
+      {{ operation(channel.publish, 'publish', channelName, channel) }}
     {% endif %}
     {% if channel.subscribe %}
-      {{ operation(channel.subscribe, 'subscribe', channelName) }}
+      {{ operation(channel.subscribe, 'subscribe', channelName, channel) }}
     {% endif %}
   </div>
 {% endfor %}
