--- a/templates/html/.partials/sidebar.html
+++ b/templates/html/.partials/sidebar.html
@@ -30,6 +30,7 @@
     <ul class="text-sm list-reset mt-2">
       {% if params.sidebarOrganization === 'byTags' %}
       <!-- With tags in sidebar -->
+      {% if asyncapi.hasTags() %}
       {% for categorytags in asyncapi.tags() %}
       <div class="mt-4 {% if open %}is-open{% endif %}">
         <div class="js-prop cursor-pointer py-2 flex property">
@@ -43,14 +44,14 @@
         </div>
         <div class="children">
           {% for channelName, channel in asyncapi.channels() %}
-            {% if channel.publish()() and categorytags.name() === channel.publish()().tags()[0].name() %}
+             {% if channel.publish() and categorytags.name() === channel.publish().tags()[0].name() %}
               <a class="js-menu-item flex break-words no-underline text-grey-darkest mt-8 sm:mt-8 md:mt-3"
                 href="#operation-publish-{{ channelName }}">
                 <span class="bg-blue-dark font-bold h-6 no-underline text-white uppercase p-1 mr-2 rounded"
                   style="height: 21px;font-size: 11px;" title="Publish">Pub</span>
-                {% if channel.publish()().summary() %}
+                {% if channel.publish().summary() %}
                 <span style="padding-top: 2px;">
-                  {{ channel.publish()().summary() }}
+                  {{ channel.publish().summary() }}
                 </span>
                 {% else %}
                 <div style="display:inline-block;">
@@ -81,6 +82,7 @@
         </div>
       </div>
       {% endfor %}
+      {% endif %}
       <!-- Untagged operations -->
       <div class="mt-4 {% if open %}is-open{% endif %}">
         <div class="js-prop cursor-pointer py-2 flex property">
@@ -93,7 +95,7 @@
         </div>
         <div class="children">
           {% for channelName, channel in asyncapi.channels() %}
-          {% if channel.publish() and not channel.publish().tags() %}
+          {% if channel.hasPublish() and not channel.publish().hasTags() %}
           <a class="js-menu-item flex break-words no-underline text-grey-darkest mt-8 sm:mt-8 md:mt-3"
             href="#operation-publish-{{ channelName }}">
             <span class="bg-blue-dark font-bold h-6 no-underline text-white uppercase p-1 mr-2 rounded"
@@ -109,7 +111,7 @@
             {% endif %}
           </a>
           {% endif %}
-          {% if channel.subscribe() and not subscribe.tags() %}
+          {% if channel.hasSubscribe() and not channel.subscribe().hasTags() %}
           <a class="js-menu-item flex break-words no-underline text-grey-darkest mt-8 sm:mt-8 md:mt-3"
             href="#operation-subscribe-{{ channelName }}">
             <span class="bg-green-dark font-bold no-underline text-white uppercase p-1 mr-2 rounded"
