--- a/templates/html/.partials/message.html
+++ b/templates/html/.partials/message.html
@@ -1,34 +1,41 @@
 {% from "./schema.html" import schema %}
 
-{% macro message(msg, showIndex=false, index=0, open=false) %}
+{% macro message(msg, showIndex=false, index=0, open=false, prefixHtml=false) %}
 
-<div class="bg-grey-lighter rounded p-4 mt-2">
-  <div class="text-sm text-grey-darker mb-2">
-    {% if showIndex %}
-    <span class="text-grey-darker font-bold mr-2">#{{index}}</span>
+<div class="center-block pr-8 pl-8">
+  <div class="operation pb-8">
+    {% if prefixHtml %}
+      {{ prefixHtml | safe }}
     {% endif %}
-    {% if msg.title() %}
-      {{msg.title()}}
-      {% if msg.name() %}
-        <span class="border text-orange rounded text-xs ml-3 py-0 px-2">{{msg.name()}}</span>
+    <div class="bg-grey-lighter rounded p-4 mt-2">
+      <div class="text-sm text-grey-darker mb-2">
+        {% if showIndex %}
+        <span class="text-grey-darker font-bold mr-2">#{{index}}</span>
+        {% endif %}
+        {% if msg.title() %}
+          {{msg.title()}}
+          {% if msg.name() %}
+            <span class="border text-orange rounded text-xs ml-3 py-0 px-2">{{msg.name()}}</span>
+          {% endif %}
+        {% else %}
+          {% if msg.name() %}
+            <span class="border text-orange rounded text-s py-0 px-2">{{msg.name()}}</span>
+          {% endif %}
+        {% endif %}
+      </div>
+      <p class="text-grey-dark text-sm">{{msg.summary()}}</p>
+      <div class="mt-4 mb-4 markdown">{{ msg.description() | markdown2html | safe }}</div>
+      {{ schema(msg.payload(), 'Payload', open=open) }}
+      {% if msg.headers() %}
+        <div class="mt-4">
+          {{ schema(msg.headers(), 'Headers', open=open) }}
+        </div>
       {% endif %}
-    {% else %}
-      {% if msg.name() %}
-        <span class="border text-orange rounded text-s py-0 px-2">{{msg.name()}}</span>
-      {% endif %}
-    {% endif %}
-  </div>
-  <p class="text-grey-dark text-sm">{{msg.summary()}}</p>
-  <div class="mt-4 mb-4 markdown">{{ msg.description() | markdown2html | safe }}</div>
-  {{ schema(msg.payload(), 'Payload', open=open) }}
-  {% if msg.headers() %}
-    <div class="mt-4">
-      {{ schema(msg.headers(), 'Headers', open=open) }}
     </div>
-  {% endif %}
+  </div>
 </div>
 
-<div class="right-block p-8">
+<div class="right-block pr-8 pl-8">
   <h4 class="text-lg text-white mb-4">Examples</h4>
 
   <form>
