Fix quotation on nodejs-ws help

--- a/templates/nodejs-ws/index.html
+++ b/templates/nodejs-ws/index.html
@@ -23,7 +23,7 @@
       console.log(`  Example: listen('{{ asyncapi.channelNames()[0] }}')`);
       console.log('- send: Send a message to the server at a currently connected path.')
       console.log('  Usage: send(message)');
-      console.log(`  Example: send('{ greet: 'Hello from client' })`);
+      console.log(`  Example: send({ greet: 'Hello from client' })`);
     }
 
     function listen(path) {
