HTML Template: utilize the extensions method from asyncapi-parser to return the list of specification extensions. Removed unnecessary filter

--- a/templates/html/.partials/schema-prop.html
+++ b/templates/html/.partials/schema-prop.html
@@ -89,10 +89,8 @@
             {% endfor %}
           </div>
         {% endif %}
-        {% for extensionName, extensionValue in prop._json %}
-            {% if extensionName | isDataExtension %} 
-                <div class="text-sm markdown">{{ extensionName }}: {{ extensionValue }}</div>
-            {% endif %}
+        {% for extensionName, extensionValue in prop.extensions() %}
+            <div class="text-sm markdown">{{ extensionName }}: {{ extensionValue }}</div>
         {% endfor %}
         {% if prop.examples() %}
           <div class="text-xs">
